--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -41,10 +41,10 @@
         line-height: 25px;
         cursor: pointer;
         @media(max-width: 800px){
-           max-width: 300px;
+           width: 335px;
             height: 270px;
             padding: 10px;
-            margin: 5px 27px;
+            margin: 15px 15px ;
         }
         
     }
