--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -1,8 +1,9 @@
 .skills {
-    background-color: #2d2e32;
+    // background-color: #2d2e32;
     padding: 150px;
     @media(max-width: 600px) {
         padding: 10px 5px;
+        margin-left: 8px;
     }
     h4 {
         text-align: center;
