--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -38,6 +38,7 @@
             display: inline-grid;
             grid-template-columns: auto auto;
             align-items: center;
+            // margin-left: 5px;
         }
         img {
             // width: 50px;
