--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .App {
   // width: 100%;
-  background-color: #25262a;
+  background-color:  #F5F5F5;
   // text-align: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
