--- a/src/components/aboutMe/AboutMe.scss
+++ b/src/components/aboutMe/AboutMe.scss
@@ -1,38 +1,114 @@
+div {
+    font-family: sans-serif;
+    font-weight: 500;
+    color: #666666;
+}
+.aboutMeHead {
+    font-size: 20px;
+    margin: 100px 500px 0px 350px;
+    @media(max-width: 800px) {
+        margin: 50px 50px 0px 10px;
+        font-size: 15;
+    }
+    div {
+        background-color: #9FB0F5;
+        height: 5px;
+        margin: 0px 950px 30px 0px;
+        @media(max-width: 800px) {
+            margin: 0px 250px 10px 0px;
+        }
+    }
+
+    h2 {
+        margin-bottom: 10px;
+        color: #000000;
+        @media(max-width: 800px) {
+            font-size: 20px;
+            line-height: 25px;
+        }
+    }
+    p {
+        font-size: 20px;
+        line-height: 35px;
+        @media(max-width: 800px) {
+            font-size: 18px;
+            line-height: 25px;
+        }
+
+    }
+}
 .aboutMe {
-    background-color: #1d1b1b;
-    padding: 50px 0px 50px 200px;
+    align-items: center;
+    display: flex;
+    // justify-content: space-between;
+    // background-color: #F5F5F5;
+    margin: 50px 0px 50px 350px;
     // text-align: center;
     @media(max-width: 800px) {
-        padding: 15px 5px 5px 5px;
+        margin: 20px 0px 50px 350px;
+        // padding: 15px 5px 5px 5px;
+        display: inline;
         // background-color: #ffff;
-        width: 100%;
+        // width: 100%;
+    }
+    h2 {
+        margin-bottom: 20px;
+        color: #000000;
+        @media(max-width: 800px) {
+            margin: 10px 10px;
+        }
+    }
+    p {
+        margin-right: 30%;
+        padding-bottom: 15px;
+        line-height: 25px;
+        font-size: 18px;
+        @media(max-width: 800px) {
+            font-size: 16px;
+            margin: 0px 10px;
+            
+        }
+    }
+    button {
+        padding: 15px;
+        font-size: 18px;
+        border-radius: 5px;
+        border: none;
+        background-color: #9FB0F5;
+        color: #000000;
+        font-weight: 500;
+        @media(max-width: 800px) {
+            font-size: 16px;
+            margin: 0px 10px 10px 10px;
+            padding: 10px;
+        }
     }
     
-    &-container {
-        position: relative;
-        @media(max-width: 800px) {
-            width: 100%;
-        }
-    }
-    &-Img {
-        width: 450px;
-        padding: 20px 20px 0px;
-        border: 5px solid #8aa7ca;
-        background-color: #1d1b1b;
-        // background-color: #8aa7ca;
-        border-radius: 5px;
-        @media(max-width: 800px) {
-            width: 100%;
-            padding: 5px 5px 0px;
-            border: none;
-            border-radius: 0;
-            background-color: #343434;
-        }
+    // &-container {
+    //     position: relative;
+    //     @media(max-width: 800px) {
+    //         width: 100%;
+    //     }
+    // }
+    // &-Img {
+    //     width: 450px;
+    //     padding: 20px 20px 0px;
+    //     border: 5px solid #007bff;
+    //     background-color: #1d1b1b;
+    //     // background-color: #8aa7ca;
+    //     border-radius: 5px;
+    //     @media(max-width: 800px) {
+    //         width: 100%;
+    //         padding: 5px 5px 0px;
+    //         border: none;
+    //         border-radius: 0;
+    //         background-color: #343434;
+    //     }
         
-        img {
-            margin-right: 0px;
-        }
-    }
+    //     img {
+    //         margin-right: 0px;
+    //     }
+    // }
     &-aboutImg {
         @media(max-width:800px) {
             width: 100%;
@@ -52,22 +128,63 @@
         }
     }
     &-skills {
-        position: absolute;
-        bottom: 50px;
-        left: 530px;
+        width: 580px;
         color: rgb(97, 95, 95);
         display: grid;
         grid-template-columns: auto auto;
+        @media(max-width: 800px) {
+            grid-column-gap: 0px;
+            grid-row-gap: 5px;
+            width: 300px;
+            margin: 0px 10px 0px 10px;
+        }
 
         .grid-item {
-            padding: 10px;
+            padding-bottom: 10px;
+            font-size: 18px;
+            @media(max-width: 800px) {
+                font-size: 16px;
+                padding-bottom: 5px;
+                // grid-template-columns: auto auto;
+                
+            }
         }
         img {
             margin-right: 10px;
+            @media(max-width: 800px) {
+                margin-right: 0px;
+                width: 10px;
+            }
         }
         @media(max-width: 800px) {
-            display: none;
+            font-size: 15px;
         }
+    }
+
+    &-mainSkill {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-column-gap: 30px;
+        grid-row-gap: 30px;
+        margin: 0px 450px 0px 0px;
+
+        div {
+            background-color: #99999993;
+            text-align: center;
+            color: #666666;
+            padding: 15px;
+            border-radius: 5px;
+        }
+        @media(max-width: 800px) {
+            grid-column-gap: 5px;
+            grid-row-gap: 5px;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(4, 1fr);
+            margin: 30px 10px 20px 10px;
+
+        }
+
     }
     
     &-text {
@@ -96,7 +213,7 @@
         }
         div {
             border-radius: 5px;
-            border: 5px solid #8aa7ca;
+            border: 5px solid #007bff;
             padding: 20px;
             @media(max-width:800px) {
                 padding: 10px;
