--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 .App {
   // width: 100%;
-  background-color:  #F5F5F5;
+  background: linear-gradient(to right, #1F2833, #0B0C10); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  // background-color:  #0B0C10;
   // text-align: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
