--- a/src/components/aboutMe/AboutMe.scss
+++ b/src/components/aboutMe/AboutMe.scss
@@ -1,7 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 div {
     font-family: sans-serif;
-    font-weight: 500;
-    color: #666666;
+    // font-weight: 500;
+    color: #C5C6C7;
 }
 .aboutMeHead {
     font-size: 20px;
@@ -11,7 +12,7 @@ div {
         font-size: 15;
     }
     div {
-        background-color: #9FB0F5;
+        background-color: #66FCF1;
         height: 5px;
         margin: 0px 950px 30px 0px;
         @media(max-width: 800px) {
@@ -21,7 +22,11 @@ div {
 
     h2 {
         margin-bottom: 10px;
-        color: #000000;
+        color: #66FCF1;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-size: 20px;
+        font-family: 'Raleway';
         @media(max-width: 800px) {
             font-size: 20px;
             line-height: 25px;
@@ -52,7 +57,10 @@ div {
         // width: 100%;
     }
     h2 {
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
         margin-bottom: 20px;
+        font-size: 20px;
         color: #000000;
         @media(max-width: 800px) {
             margin: 10px 10px;
@@ -73,9 +81,10 @@ div {
         padding: 15px;
         font-size: 18px;
         border-radius: 5px;
-        border: none;
-        background-color: #9FB0F5;
-        color: #000000;
+        border: 2px solid #66FCF1;
+        cursor: pointer;
+        background-color: #9fb0f500;
+        color: #C5C6C7;
         font-weight: 500;
         @media(max-width: 800px) {
             font-size: 16px;
@@ -170,9 +179,12 @@ div {
         margin: 0px 450px 0px 0px;
 
         div {
-            background-color: #99999993;
+            background-color: #66FCF1;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
             text-align: center;
-            color: #666666;
+            font-size: 14px;
+            color: #0B0C10;
             padding: 15px;
             border-radius: 5px;
         }
