--- a/src/components/experience/Experience.scss
+++ b/src/components/experience/Experience.scss
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 .divider {
     margin-bottom: 30px;
 }
@@ -36,15 +37,21 @@
         
         &-level {
             margin-top: 5px;
-            font-size: 20px;
             margin-bottom: 60px;
-            color: #000000;
+            h2 {
+                text-transform: uppercase;
+                letter-spacing: 0.1em;
+                font-size: 20px;
+                font-family: 'Raleway';
+                color: #66FCF1;
+            }
+            
             @media(max-width: 600px) {
                 margin-bottom: 0px;
                 font-size: 16px;
             }
             div {
-                background-color: #9FB0F5;
+                background-color: #66FCF1;
                 height: 5px;
                 margin: 10px 1150px 30px 0px;
                 @media(max-width: 600px) {
@@ -85,7 +92,7 @@
         }
     }
     &-button {
-        background-color: #9FB0F5;
+        background-color: #66FCF1;
         padding: 5px;
         width: 72px;
         border-radius: 2px;
@@ -100,6 +107,7 @@
             }
         }
         p {
+            font-size: 18px;
             line-height: 25px;
             @media(max-width: 600px) {
                 font-size: 16px;
