--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -1,4 +1,12 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+
 .projects {
+    h2 {
+        font-family: "Raleway";
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-size: 20px;
+    }
     // background-color: #F5F5F5;
     // width: 100%;
     height: 100%;
@@ -10,37 +18,102 @@
         height: 50%;
         margin: 50px 10px 80px 10px;
     }
-    img {
-        width: 100%;
+    button {
+        padding: 5px;
+        font-size: 15px;
+        border-radius: 5px;
+        color: #C5C6C7;
+        background-color: #9fb0f500;
+        position: absolute;
+        top: 280px;
+        left: 135px;
+        // margin: 10px;
+        border: 2px solid #66FCF1;
+        cursor: pointer;
+        @media(max-width: 800px) {
+            font-size: 16px;
+            margin-top: 25px;
+            padding: 10px;
+            font-weight: bold;
+        }
     }
     &-img {
-        // align-items: center;
+        width: 800px;
+        height: 330px;
+        background-image: url('../../assets/files/Capture11.JPG');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+
+    }
+    &-img2 {
+        width: 800px;
+        height: 330px;
+        background-image: url('../../assets/agoganetwork.jpeg');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+
+    }
+    &-img3 {
+        width: 800px;
+        height: 330px;
+        background-image: url('../../assets/files/GoAsOne.JPG');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+
+    }
+    &-img4 {
+        width: 800px;
+        height: 330px;
+        background-image: url('../../assets/fashion.jpeg');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+
+    }
+    &-img5 {
+        width: 800px;
+        height: 330px;
+        background-image: url('../../assets/invoice.jpeg');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+
+    }
+    &-img6 {
+        width: 800px;
+        height: 330px;
+        background-image: url('../../assets/files/movie.JPG');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
 
     }
     &-title {
         margin-top: 5px;
             font-size: 20px;
             margin-bottom: 60px;
-            color: #000000;
+            color: #66FCF1;
             div {
-                background-color: #9FB0F5;
+                background-color: #66FCF1;
                 height: 5px;
-                margin: 10px 1150px 30px 0px;
+                margin: 10px 1180px 30px 0px;
                 @media(max-width: 600px) {
-                    margin: 10px 310px 0px 0px;
-
+                    margin: 10px 250px 20px 0px;
                 }
             }
     }
     &-container {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 10px;
-        grid-row-gap: 10px;
+        grid-template-columns: repeat(2, 1fr);
+        // grid-template-rows: repeat(2, 1fr);
+        // grid-column-gap: 10px;
+        grid-row-gap: 30px;
         // display: inline-grid;
         // grid-template-columns: auto auto auto;
-        padding: 70px;
+        padding: 30px;
         background-color: #9999990e;
         // width: 100%;
         
@@ -62,13 +135,16 @@
         }
     }
     &-weatherApp {
-        background-color: #F5F5F5;
-        margin: 0px;
-        width: 350px;
-        height: 400px;
+        display: flex;
+        background-color: #ffffff00;
+        // margin: 0px;
+        width: 600px;
+        height: 350px;
         padding: 10px;
         color: #7b7c85;
         line-height: 25px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
         cursor: pointer;
         @media(max-width: 800px){
            width: 350px;
@@ -79,11 +155,27 @@
         
     }
     &-description {
-        text-align: center;
-        margin-top: 5px;
+        // text-align: center;
+        position: relative;
+        padding: 5px;
+        margin-top: 0px;
+        width: 600px;
+        background-color: #1F2833;
+        h4 {
+            font-family: "Raleway";
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            font-size: 20px;
+            margin: 25px 0px 10px 10px;
+        }
+        p {
+            line-height: 25px;
+            font-size: 15px;
+            padding: 10px 5px 0px 10px;
+        }
     }
     &-flex {
-        display: flex;
+        // display: flex;
         justify-content: space-between;
         img {
             margin-right: 0px;
