--- a/src/App.scss
+++ b/src/App.scss
@@ -5,10 +5,14 @@
   // background-color:  #0B0C10;
   // text-align: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  
 }
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  @media(max-width: 800px) {
+    font-size: 15px !important ;
+  }
 }
 
