--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -7,14 +7,10 @@
         letter-spacing: 0.1em;
         font-size: 20px;
     }
-    // background-color: #F5F5F5;
-    // width: 100%;
     height: 100%;
     font-size: 18px;
-    // text-align: center;
     margin: 150px 325px 200px 325px;
     @media(max-width: 600px) {
-        // width: 100%;
         height: 50%;
         margin: 50px 10px 80px 10px;
     }
@@ -31,9 +27,12 @@
         border: 2px solid #66FCF1;
         cursor: pointer;
         @media(max-width: 800px) {
-            font-size: 16px;
+            position: absolute;
+            top: 210px;
+            left: 210px;
+            font-size: 14px;
             margin-top: 25px;
-            padding: 10px;
+            padding: 7px;
             font-weight: bold;
         }
     }
@@ -44,6 +43,9 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
+        @media(max-width: 800px) {
+            width: 330px;
+        }
 
     }
     &-img2 {
@@ -53,6 +55,9 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
+        @media(max-width: 800px) {
+            width: 330px;
+        }
 
     }
     &-img3 {
@@ -62,6 +67,9 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
+        @media(max-width: 800px) {
+            width: 330px;
+        }
 
     }
     &-img4 {
@@ -71,7 +79,9 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
-
+        @media(max-width: 800px) {
+            width: 330px;
+        }
     }
     &-img5 {
         width: 800px;
@@ -80,7 +90,9 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
-
+        @media(max-width: 800px) {
+            width: 330px;
+        }
     }
     &-img6 {
         width: 800px;
@@ -89,7 +101,9 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
-
+        @media(max-width: 800px) {
+            width: 330px;
+        }
     }
     &-title {
         margin-top: 5px;
@@ -101,7 +115,7 @@
                 height: 5px;
                 margin: 10px 1180px 30px 0px;
                 @media(max-width: 600px) {
-                    margin: 10px 250px 20px 0px;
+                    margin: 10px 310px 20px 0px;
                 }
             }
     }
@@ -121,7 +135,8 @@
         //     box-shadow: 0 0 11px rgba(70, 68, 68, 0.2);  
         // }
         @media(max-width: 600px) {
-            grid-row-gap: 10px;
+            // width: 365px;
+            grid-row-gap: 30px;
             grid-template-columns: repeat(1, 1fr);
             // grid-template-rows: repeat(1, 1fr);
             // display: block;
@@ -144,14 +159,20 @@
         color: #7b7c85;
         line-height: 25px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        border-radius: 10px;
         cursor: pointer;
-        @media(max-width: 800px){
-           width: 350px;
-            height: 420px;
+        @media(max-width: 768px){
+            flex-direction: column;
+            width: 350px;
+            height: 640px;
             padding: 10px;
-            margin: 15px 10px ;
+            margin: 15px 10px;
         }
+        // @media screen and (max-width: 768px) and (max-height: 2960px) {
+        //     height: 640px;
+        //     padding: 10px;
+        //     margin: 15px 25px 0px 5px ;
+        //     /* Your styles for this screen size go here */
+        //   }
         
     }
     &-description {
@@ -161,6 +182,10 @@
         margin-top: 0px;
         width: 600px;
         background-color: #1F2833;
+        @media(max-width: 800px) {
+            width: 330px;
+            height: 290px;
+        }
         h4 {
             font-family: "Raleway";
             text-transform: uppercase;
@@ -172,21 +197,6 @@
             line-height: 25px;
             font-size: 15px;
             padding: 10px 5px 0px 10px;
-        }
-    }
-    &-flex {
-        // display: flex;
-        justify-content: space-between;
-        img {
-            margin-right: 0px;
-        }
-    }
-    &-used {
-        display: flex;
-        justify-content: center;
-        div {
-            margin: 0px 20px 0px 0px;
-            
         }
     }
 }
