--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  @media(max-width: 800px) {
+  @media only screen and (max-width: 800px) {
     font-size: 15px !important ;
   }
 }
